--- a/WarZone/index.html
+++ b/WarZone/index.html
@@ -13,6 +13,11 @@
     <header>
         <nav>
             <div class="nav-container">
+                 <div class="hamburger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                </div>
                 <ul>
                     <li><a href="#home"><i class="fa-solid fa-house"></i> Home</a></li>
                     <li><a href="#eduai-mentor"><i class="fa-solid fa-brain"></i> EduAI Mentor</a></li>
