--- a/WarZone/index.html
+++ b/WarZone/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+    const hamburger = document.querySelector(".hamburger");
+    const navMenu = document.querySelector("nav ul");
+
+    hamburger.addEventListener("click", function() {
+        navMenu.classList.toggle("active");
+    });
+
+    </script>
 </head>
 <body>
     <button id="backToTop" title="Go to top">↑</button>
